# LibertyRecomp

./: --- LLDB EXIT ---  .gitignore  .gitignore.bak  .gitmodules  ACTIONABLE_CHANGES.md  CMakeLists.txt  CMakePresets.json  CRASH_ANALYSIS_sub_8216A288.md  DLC_UPDATE_SUMMARY.md  FIX_IMPLEMENTATION_PLAN.md  GPU_STATE_MACHINE_ANALYSIS_20260224_093402.md  MOBILE_CONSOLE_BUILD_SUMMARY.md  NETWORKING_REVIEW_SUMMARY.md  PPC_ASSEMBLY_VERIFICATION.md  RACE_CONDITION_ANALYSIS.md  README.md  RESEARCH_FINDINGS_20260224_054444.md  Researching Semaphore Deadlock.md  audit_rendering.py  chat_summary.txt  chat_summary_optimized.txt  computed_hashes.txt  debug_audio_callback.lldb  debug_crash.lldb  debug_race_condition.lldb  debug_semaphore_loop.lldb  gta_analysis.txt  lib20.txt  liberty_lldb_bt.txt  liberty_sample.txt  liberty_sample2.txt  lldb_attach2.sh  lldb_attach_session.sh  lldb_session.py  parse_xex.py  pip_install.txt  vcpkg.json  verify_audio_callback.sh  verify_renderer_docs.py  xex_hash.txt
LibertyRecomp/: CMakeLists.txt  CMakeLists.txt.bak  app.cpp  main.cpp  stdafx.h
LibertyRecomp/apu/: audio.cpp  audio_state.cpp  audio_state.h  xma_decoder.cpp
LibertyRecomp/apu/driver/: sdl2_driver.cpp
LibertyRecomp/cpu/: guest_thread.cpp  guest_thread.h  ppc_config.h  ppc_context.h  ppc_func_decls.h
LibertyRecomp/gpu/: camera_extract.cpp  camera_extract.h  gfx_state.cpp  gfx_state.h  gtaiv_device.h  gtaiv_render_state.cpp  gtaiv_render_state.h  postprocess_aa.cpp  postprocess_aa.h  postprocess_renderer.cpp  postprocess_renderer.h  postprocess_renderer_stub.cpp  shadow_quality.cpp  shadow_quality.h  sps_preset_table.h  upscaler.cpp  upscaler.h  upscaler_dlss.cpp  upscaler_dlss.h  upscaler_fsr3.cpp  upscaler_fsr3.h  upscaler_metalfx.h  upscaler_metalfx.mm  upscaler_xess.cpp  upscaler_xess.h  video.cpp  video.h
LibertyRecomp/gpu/shader/hlsl/: bloom_composite_ps.hlsl  bloom_composite_ps.hlsl.spv  bloom_downsample_ps.hlsl  bloom_downsample_ps.hlsl.spv  bloom_extract_ps.hlsl  bloom_extract_ps.hlsl.spv  bloom_upsample_ps.hlsl  (+37 more)
LibertyRecomp/hid/: dualsense.cpp  dualsense.h  hid.h
LibertyRecomp/hid/driver/: sdl_hid.cpp
LibertyRecomp/install/: auto_installer.cpp  auto_installer.h  directory_file_system.h  embedded_assets.cpp  embedded_assets.h  installer.cpp  installer.h  iso_file_system.h  manifest.json.in  platform_paths.cpp  platform_paths.h  rpf_extractor.cpp  rpf_extractor.h  thread_pool.cpp  thread_pool.h  virtual_file_system.h  xcontent_file_system.h
LibertyRecomp/install/hashes/: dlc_tbogt.cpp  dlc_tlad.cpp  game.cpp  title_update.cpp
LibertyRecomp/install/xbox360/: stfs_parser.cpp  stfs_parser.h  title_update_manager.cpp  title_update_manager.h  xex_patcher.cpp  xex_patcher.h  xex_validator.cpp  xex_validator.h
LibertyRecomp/kernel/: button_prompts.cpp  button_prompts.h  crt_init.cpp  crt_init.h  game_init.cpp  heap.cpp  heap.h  imports.cpp  imports.cpp.old_runtime_backup  lod_hooks.cpp  lod_hooks.h  mapped_file.cpp  mapped_file.h  memory.cpp  menu_hooks.cpp  menu_hooks.h  mod_overlay.cpp  mod_overlay.h  object_table.cpp  object_table.h  save_hooks.cpp  sync_table.cpp  sync_table.h  user_profile.cpp  user_profile.h  vfs.cpp  vfs.h  vfs.h.mod_backup  xam.cpp  xdm.h  xenon_memory.cpp  xevent.cpp  xevent.h  xex_header_data.h  xmutant.cpp  xmutant.h  xsemaphore.cpp  xsemaphore.h
LibertyRecomp/kernel/io/: file_system.cpp  gxt_loader.cpp  gxt_loader.h  img_loader.cpp  img_loader.h  net_socket.cpp  net_socket.h  p2p_manager.cpp  p2p_manager.h  rpf_loader.cpp  rpf_loader.h  rsc_types.h  session_tracker.h  session_tracker_lan.cpp  signaling_client.cpp  signaling_client.h  texture_convert.cpp  texture_convert.h  voice_chat.cpp  voice_chat.h
LibertyRecomp/locale/: config_locale.cpp  locale.cpp
LibertyRecomp/os/android/: jni_glue.cpp  logger_android.cpp  media_android.cpp  process_android.cpp  user_android.cpp  version_android.cpp
LibertyRecomp/os/gamecenter/: achievement_bridge_gc.h  achievement_bridge_gc.mm
LibertyRecomp/os/ios/: ios_paths_objc.mm  logger_ios.cpp  media_ios.cpp  process_ios.cpp  user_ios.cpp  version_ios.cpp
LibertyRecomp/os/ps4/: achievement_bridge_ps4.cpp  achievement_bridge_ps4.h  logger_ps4.cpp  media_ps4.cpp  np_conf_ps4.h  process_ps4.cpp  ps4_main.cpp  savedata_ps4.cpp  savedata_ps4.h  trophy_ps4.cpp  user_malloc_ps4.cpp  user_ps4.cpp  version_ps4.cpp
LibertyRecomp/os/switch/: logger_switch.cpp  media_switch.cpp  process_switch.cpp  switch_main.cpp  user_switch.cpp  version_switch.cpp
LibertyRecomp/patches/: aspect_ratio_patches.cpp  audio_patches.cpp  gta4_ds4_patches.cpp  gta4_ds4_patches.h  gta4_motion_patches.cpp  gta4_motion_patches.h  gta4_patches.cpp  gta4_patches.h  memcpy_patches.cpp  misc_patches.cpp  player_limit_patches.cpp  player_limit_patches.h  postfx_hooks.cpp  postfx_hooks.h  video_patches.cpp
LibertyRecomp/res/ios/: LaunchScreen.storyboard  iOSBundleInfo.plist.in
LibertyRecomp/res/macos/: game_icon.icns
LibertyRecomp/res/ps4/: extract_trophy_trp.py
LibertyRecomp/runtime/: rex_adapter.h  rex_runtime.h  rex_sync.h  rex_thread_state.h  rex_xobject.h
LibertyRecomp/ui/: button_window.cpp  common_menu.cpp  game_window.cpp  game_window.h  gta4_style.h  imgui_utils.cpp  installer_wizard.cpp  main_menu.cpp  main_menu.h  network_status_overlay.cpp  network_status_overlay.h  online_multiplayer_menu.cpp  online_multiplayer_menu.h
LibertyRecomp/user/: achievement_manager.cpp  config.cpp  config.h  config_def.h  paths.h
glue/: CMakeLists.txt
glue/rexglue-sdk-main/: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  CMakePresets.json  README.md
glue/rexglue-sdk-main/build-codegen/: cmake_install.cmake
glue/rexglue-sdk-main/cmake/: rexglue_install.cmake
glue/rexglue-sdk-main/gta4-recomp/: gta4_config.toml
glue/rexglue-sdk-main/scripts/: install-sdk_win.ps1
glue/rexglue-sdk-main/triplets/: arm64-osx.cmake  x64-osx-clang-static.cmake  x64-windows-clang-static.cmake
tools/liberty_debugger/: ARCHITECTURE.md  CMakeLists.txt  README.md  command_parser.cpp  command_parser.h  debug_state.cpp  debug_state.h  debugger.cpp  debugger.h
(+947 files in other folders)
